[cloth-notifications] Fix notifications not showing up.
Also Timeouts and replacing notifications.

Also icons are padded now, but images arent

--- a/cloth-notifications/resources/style.css
+++ b/cloth-notifications/resources/style.css
@@ -16,6 +16,10 @@ window.urgency-critical {
     background: #d92817;
 }
 
+image.icon {
+    padding: 20px;
+}
+
 label {
     padding: 10px;
 }
